# XET-Composer

./: README.md
xet-composer/: README.md
xet-composer/backend/xet_composer_backend/: Cargo.toml
xet-composer/backend/xet_composer_backend/src/: artifact_manager.rs  artifact_storage.rs  deploy_engine.rs  kyc.rs  main.rs  sol_template_engine.rs
xet-composer/contracts/: TokenVesting.sol.tera
xet-composer/frontend/: package-lock.json  package.json
xet-composer/frontend/src/app/: page.tsx
