[package]
name = "xet_composer_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
tokio = { version = "1.30", features = ["full"] } # Using 1.30 as per instructions
hex = "0.4"
solang-parser = "0.3"
tempfile = "3" # Added for deploy_engine.rs
